# endo

./: .gitignore  .hlint.yaml  README.markdown  endo.cabal  package.yaml  stack.yaml
executable/: Main.hs
test/: Main.hs
tests/: Main.hs
